<resources>
    <string name="app_name">Reflection</string>
    <string name="title_activity_login">Iniciar Sesion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="facebook_app_id">191447414715383</string>
    <string name="fb_login_protocol_scheme">fb191447414715383</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="user_first_name_hint">First Name</string>
    <string name="user_last_name_hint">Last Name</string>
    <string name="user_email_hint">Email</string>
    <string name="user_age_hint">Age</string>
    <string name="user_gender_hint">Gender (Default Male, On for Female)</string>
    <string name="title_activity_pantalla_bienvenida">PantallaBienvenida</string>
    <string name="input_birth_date_hint">Birth date (yyyy-MM-dd)</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="take_one_picture">Solo falta una foto en tu registro. Tómate 1 foto y envíala.</string>
    <string name="take_two_picture">Al parecer faltan 2 fotos en tu registro. Tómate 2 fotos y envíalas.</string>
    <string name="take_three_picture">Al parecer no tienes fotos registradas. Tómate 3 fotos y envíalas.</string>
    <string name="smart_mirror_is_ready">El smart mirror esta listo para reconocerte</string>
    <string name="sign_in">Iniciando...</string>
    <string name="update_user_form_name">NOMBRES</string>
    <string name="update_user_form_last_name">APELLIDOS</string>
    <string name="update_user_form_gender">GENERO</string>
    <string name="user_form_birth_date">FECHA DE NACIEMINTO</string>
    <string name="photo_activity_take_again">Tomar denuevo</string>
    <string name="facebook_modal_message">Reflection utilizara la cuenta de Google vinculada a este equipo para sincronizar eventos y correos.</string>
    <string name="facebook_modal_title">Atención!</string>
    <string name="continue_text">Continuar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="attention_text">¡ATENCION!</string>
    <string name="alert_message_1">Reflection utilizara la cuenta de</string>
    <string name="alert_message_2">Google vinculada a  este equipo</string>
    <string name="alert_message_3">para sincronizar  evento y correo</string>
    <string name="welcome_text">BIENVENIDO</string>
    <string name="config_mirror_tip">configura tu espejo antes</string>
    <string name="config_mirror_tip_2">de empezar a usarlo</string>
    <string name="start_text">¡Empecemos!</string>
    <string name="personal_data">DATOS PERSONALES</string>
    <string name="user_form_job">OCUPACION</string>
    <string name="user_form_job_area">AREA DE TRABAJO</string>
    <string name="photo_title">FOTOS</string>
    <string name="ready_part_1">!El espejo esta listo</string>
    <string name="ready_part_2">para reconocerte!</string>
    <string name="home_text">¡HOLA</string>
    <string name="widgets_button">Elegir widgets</string>
    <string name="photo_button">Añadir fotos</string>
    <string name="update_button">Actualizar datos</string>
    <string name="select_widgets">SELECCIONAR WIDGETS</string>
    <string-array name="gender_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="occupation">
        <item>Estudiante universitario</item>
        <item>Trabajador</item>
        <item>Ambos</item>
    </string-array>
    <string-array name="area">
        <item>Administracion y hoteleria</item>
        <item>Arquitectura</item>
        <item>Artes Contemporaneras</item>
        <item>Ciencias de la Salud</item>
        <item>Comunicaciones</item>
        <item>Derecho</item>
        <item>Diseño</item>
        <item>Economia</item>
        <item>Educacion</item>
        <item>Ingenieria e informatica</item>
        <item>Negocios</item>
        <item>Psicologia</item>
    </string-array>
</resources>
