<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.edu.upc.smartmirror.activities.HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:id="@+id/linearLayout7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home_text"
            android:id="@+id/welcomeTextView"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:width="20dp"
            android:height="2dp"
            android:background="@color/ColorBlack"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Que deseas hacer hoy?"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.483">
        <Button
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:id="@+id/updateButton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/circle_filled_button"
            android:text="@string/update_button"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorIcons"/>
        <Button
            android:layout_width="210dp"
            android:id="@+id/photoButton"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/circle_filled_button"
            android:text="@string/photo_button"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorIcons"/>
        <Button
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:id="@+id/widgetButton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/circle_filled_button"
            android:text="@string/widgets_button"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorIcons"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/setting_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
